test/errors/error36.vult
type x {
  val a : int;
}

type x {
  val a : int;
}
